announcement search component refacto